Fixing spacing

--- a/public/assets/css/pages/expressions.css
+++ b/public/assets/css/pages/expressions.css
@@ -74,7 +74,6 @@
         display: inline-block;
     }
 }
-
-.app-expressions {
+.app-expression-name {
     margin-top: 20px;
 }
